alignment issues solved

--- a/src/pages/home/homecontent/homeCateg/HomeCateg.css
+++ b/src/pages/home/homecontent/homeCateg/HomeCateg.css
@@ -276,6 +276,27 @@ p.pricategPara6 {
     color: white;
     
 } 
+@media only screen and (max-width:1921px) and (min-width:1601px){
+    .pricategs{
+        margin-top: 80px;
+        margin-left: 280px;
+    }
+    
+}
+@media only screen and (max-width:1600px) and (min-width:1537px){
+    .pricategs{
+        margin-top: 80px;
+        margin-left:200px;
+    }
+    
+}
+@media only screen and (max-width:1536px) and (min-width:1441px){
+    .pricategs{
+        margin-top: 80px;
+        margin-left:170px;
+    }
+    
+}
 @media only screen and (max-width:1280px){
     .pricateg2  { 
         margin-left: -35px;
@@ -626,6 +647,97 @@ p.pricategPara6 {
         width: 206px; 
     }
 }
+@media only screen and (max-width:540px) and (min-width:431px){  
+    .pricategContent1 {
+        height: 280px;
+        background-color: white;
+        margin-top: -10px; 
+    }
+    .pricateg1  {
+        max-width: 380px;
+        height: 430px; 
+        margin-left: -70px;  
+    }  
+    p.pricategPara1 { 
+        width: 335px;
+        margin-left: 7px;  
+    } 
+    .pricategContent2 {
+        height: 280px;
+        background-color: white;
+        margin-top: -10px; 
+    }
+    .pricateg2  {
+        max-width: 380px;
+        height: 430px;  
+        margin-left: -70px;
+        margin-top: 50px;
+    }  
+    p.pricategPara2 { 
+        width: 335px; 
+    } 
+    .pricategContent3 {
+        height: 290px;
+        background-color: white;
+        margin-top: -10px; 
+    }
+    .pricateg3  {
+        max-width: 380px;
+        height: 430px;  
+        margin-left: -70px;
+        margin-top: 50px;
+    } 
+    p.pricategPara3 { 
+        width: 335px; 
+    } 
+    .pricateg4  {
+        max-width: 380px;
+        height: 430px; 
+        margin-top: 50px;
+        margin-left: -70px; 
+    } 
+    .pricategContent4 {
+        height: 320px;
+        background-color: white;
+        margin-top: -10px; 
+    }
+    
+    p.pricategPara4 { 
+        width: 335px; 
+    } 
+    .pricateg5  {
+        max-width: 380px;
+        height: 430px; 
+        margin-top: 50px;  
+        margin-left: -70px; 
+    } 
+    .pricategContent5 {
+        height: 320px;
+        background-color: white;
+        margin-top: -10px; 
+    }
+     
+    
+    p.pricategPara5 { 
+        width: 335px; 
+    } 
+    .pricateg6  {
+        max-width: 380px;
+        height: 430px; 
+        margin-top: 50px; 
+        margin-left: -70px; 
+    } 
+    .pricategContent6 {
+        height: 320px;
+        background-color: white;
+        margin-top: -10px; 
+    }
+     
+    
+    p.pricategPara6 { 
+        width: 335px; 
+    }
+}
 @media only screen and (max-width:430px){  
     h1.pricategHead{
         font-size: 30px; 
@@ -782,9 +894,9 @@ p.pricategPara6 {
         font-size: 23px; 
     }
     .pricateg1  {
-        max-width: 240px;
+        max-width: 240px ;
         height: 430px; 
-        margin-left: -110px;  
+        margin-left: -110px !important;  
     }  
     p.pricategPara1 { 
         width: 192px;
@@ -793,7 +905,7 @@ p.pricategPara6 {
     .pricateg2  {
         max-width: 240px;
         height: 430px;  
-        margin-left: -110px;
+        margin-left: -110px !important;
         margin-top: 50px;
     }  
     p.pricategPara2 { 
@@ -802,7 +914,7 @@ p.pricategPara6 {
     .pricateg3  {
         max-width: 240px;
         height: 430px;  
-        margin-left: -110px;
+        margin-left: -110px !important;
         margin-top: 50px;
     } 
     p.pricategPara3 { 
@@ -812,7 +924,7 @@ p.pricategPara6 {
         max-width: 240px;
         height: 430px; 
         margin-top: 50px;
-        margin-left: -110px; 
+        margin-left: -110px !important; 
     } 
     
     p.pricategPara4 { 
@@ -822,7 +934,7 @@ p.pricategPara6 {
         max-width: 240px;
         height: 430px; 
         margin-top: 50px;  
-        margin-left: -110px; 
+        margin-left: -110px !important; 
     } 
      
     
@@ -833,7 +945,7 @@ p.pricategPara6 {
         max-width: 240px;
         height: 430px; 
         margin-top: 50px; 
-        margin-left: -110px; 
+        margin-left: -110px !important; 
     } 
      
     
@@ -841,4 +953,78 @@ p.pricategPara6 {
         width: 192px; 
     }
 }
+@media only screen and (max-width:365px){
+    h1.pricategHead{
+        font-size: 25px; 
+    }
+    .pricateg1,.pricateg2,.pricateg3,.pricateg4,.pricateg5,.pricateg6  { 
+        margin-left: -120px;  
+    } 
+}
+@media only screen and (max-width:280px){  
+    h1.pricategHead{
+        font-size: 20px;  
+        margin-left: -40px;
+    }
+    .pricateg1  {
+        max-width: 240px;
+        height: 430px; 
+        margin-left: -130px !important;  
+    }  
+    p.pricategPara1 { 
+        width: 192px;
+        margin-left: 7px;  
+    } 
+    .pricateg2  {
+        max-width: 240px;
+        height: 430px;  
+        margin-left: -130px !important;
+        margin-top: 50px;
+    }  
+    p.pricategPara2 { 
+        width: 192px;  
+    } 
+    .pricateg3  {
+        max-width: 240px;
+        height: 430px;  
+        margin-left: -130px !important;
+        margin-top: 50px;
+    } 
+    p.pricategPara3 { 
+        width: 192px; 
+    } 
+    .pricateg4  {
+        max-width: 240px;
+        height: 430px; 
+        margin-top: 50px;
+        margin-left: -130px !important; 
+    } 
+    
+    p.pricategPara4 { 
+        width: 192px; 
+    } 
+    .pricateg5  {
+        max-width: 240px;
+        height: 430px; 
+        margin-top: 50px;  
+        margin-left: -130px !important; 
+    } 
+     
+    
+    p.pricategPara5 { 
+        width: 192px; 
+    } 
+    .pricateg6  {
+        max-width: 240px;
+        height: 430px; 
+        margin-top: 50px; 
+        margin-left: -130px !important; 
+    } 
+     
+    
+    p.pricategPara6 { 
+        width: 192px; 
+    }
+}
+
  
